--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^0.5.11
 
 
   # The following adds the Cupertino Icons font to your application.
