--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -54,6 +54,9 @@ flutter:
   assets:
     - assets/bbuildingwavy.jpg
     - assets/grizzly.png
+    - assets/rose.png
+    - assets/bud.png
+    - assets/thorn.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
